# fpl-2025

./: README.md  pyproject.toml
fpl/: main.py
fpl/api/: client.py
fpl/repositories/: __init__.py  fixture_repository.py  gameweek_repository.py  player_repository.py  player_type_repository.py  team_repository.py
fpl/schemas/: __init__.py  fixture.py  gameweek.py  player.py  player_type.py  team.py
fpl/services/: __init__.py  data_parser.py  player_type_service.py
tests/: runtests.py
tests/api/: test_client_integration.py
tests/repositories/: test_fixture_repository_unit.py  test_player_type_repository_unit.py
tests/services/: test_data_parser_unit.py  test_player_type_service_unit.py
tests/unit/api/: test_client.py
tests/unit/repositories/: test_gameweek_repository.py  test_player_repository.py  test_player_type_repository.py  test_team_repository.py
